--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
         <link rel="stylesheet" href="styles.css" />
         <script src="script.js" defer></script>
         <title>Background Slider</title>
     </head>
     <body>
-        <h1>Hello</h1>
+        <div class="slider-container">
+            <div class="slide active" style="background-image: url(src/back-1.jpg);"></div>
+            <div class="slide" style="background-image: url(src/back-2.jpg);"></div>
+            <div class="slide" style="background-image: url(src/back-3.jpg);"></div>
+            <div class="slide" style="background-image: url(src/back-4.jpg);"></div>
+            <div class="slide" style="background-image: url(src/back-5.jpg);"></div>
+
+            <button class="arrow left-arrow" id="left">
+                <i class="fas fa-arrow-left"></i>
+            </button>
+            <button class="arrow right-arrow" id="right">
+                <i class="fas fa-arrow-right"></i>
+            </button>
+        </div>
     </body>
 </html>
