--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="slide" style="background-image: url(src/back-2.jpg);"></div>
             <div class="slide" style="background-image: url(src/back-3.jpg);"></div>
             <div class="slide" style="background-image: url(src/back-4.jpg);"></div>
-            <div class="slide" style="background-image: url(src/back-5.jpg);"></div>
+            <div class="slide" style="background-image: url(src/back-5.jpeg);"></div>
 
             <button class="arrow left-arrow" id="left">
                 <i class="fas fa-arrow-left"></i>
